--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "ai-proxy-server",
   "version": "1.0.0",
   "description": "Generic AI proxy server with rate limiting and security",
-  "main": "server-clean.js",
+  "main": "server.js",
   "scripts": {
-    "start": "node server-clean.js",
-    "dev": "nodemon server-clean.js"
+    "start": "node server.js",
+    "dev": "nodemon server.js"
   },
   "keywords": ["ai", "proxy", "api", "rate-limiting", "security"],
   "author": "Generic Developer",
